# zkbench

./: README.md
circuits/hash_light/: Nargo.toml  Prover.toml
circuits/hash_light/src/: main.nr
circuits/pure_compare/: Nargo.toml  Prover.toml
circuits/pure_compare/src/: main.nr
circuits/zk_voting/: Nargo.toml  Prover.toml
circuits/zk_voting/src/: main.nr
scripts/: bench.sh
zkbench/: Cargo.toml  README.md
zkbench/src/: circuit.rs  cli.rs  main.rs  pipeline.rs  report.rs  report_html.rs
