[package]
name = "zkbench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
indicatif = "0.17"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "process", "fs", "io-util"] }
open = "5"
